# OpsAgents

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yml  docker-compose.yml  implementation_plan.md  pyproject.toml
docs/: architecture.md  configuration.md  getting-started.md  index.md  mcp-integration.md
examples/: basic_usage.py  custom_config.yml
src/opsagents/: __init__.py  __main__.py  cli.py  config.py
src/opsagents/cloud/: __init__.py
src/opsagents/cloud/architecture/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/cloud/cost/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/cloud/incident/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/cloud/infrastructure/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/cloud/security/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/core/: __init__.py  approval.py  base_agent.py  llm_provider.py  output.py  state.py  tools.py
src/opsagents/devops/: __init__.py
src/opsagents/devops/cicd/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/devops/container_security/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/devops/gitops/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/devops/kubernetes/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/devops/monitoring/: __init__.py  agent.py  prompts.py  tools.py
src/opsagents/mcp/: __init__.py  server.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/cloud/: test_cloud_agents.py
tests/core/: test_base_agent.py
tests/devops/: test_devops_agents.py
tests/mcp/: test_server.py
