[project]
name = "opsagents"
version = "0.1.0"
description = "Production-ready Cloud & DevOps AI Agents — 10 intelligent agents for infrastructure, security, cost, CI/CD, Kubernetes, and more."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "OpsAgents Contributors" },
]
keywords = [
    "ai-agents",
    "cloud",
    "devops",
    "aws",
    "kubernetes",
    "terraform",
    "langgraph",
    "mcp",
    "infrastructure-as-code",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "langchain-aws>=0.2",
    "langchain-ollama>=0.3",
    "mcp[cli]>=1.9",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.35",
    "kubernetes>=31.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "boto3-stubs[essential]>=1.35",
    "types-PyYAML>=6.0",
]

[project.scripts]
opsagents = "opsagents.cli:cli"

[project.urls]
Homepage = "https://github.com/opsagents/opsagents"
Documentation = "https://github.com/opsagents/opsagents/tree/main/docs"
Repository = "https://github.com/opsagents/opsagents"
Issues = "https://github.com/opsagents/opsagents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsagents"]

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["opsagents"]

# ── Mypy ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langchain_aws.*",
    "langchain_ollama.*",
    "langgraph.*",
    "mcp.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
